--- a/cloud/package.json
+++ b/cloud/package.json
@@ -17,5 +17,8 @@
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.6",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
