--- a/cloud/config/config.json
+++ b/cloud/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "root",
-    "password": "123",
+    "username": "agua",
+    "password": "123456789",
     "database": "sistema_agua",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "123",
+    "username": "agua",
+    "password": "123456789",
     "database": "sistema_agua",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "123",
+    "username": "agua",
+    "password": "123456789",
     "database": "sistema_agua",
     "host": "127.0.0.1",
     "dialect": "mysql"
